--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/faddi/zonar-zmq/issues"
   },
-  "homepage": "https://github.com/faddi/zonar-zmq"
+  "homepage": "https://github.com/faddi/zonar-zmq",
+  "dependencies": {
+    "zmq": "~2.6.0",
+    "zonar": "~0.4.6",
+    "mocha": "~1.18.2",
+    "should": "~3.3.1"
+  }
 }
